config/webhook-admission/admission_configurations.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - failurePolicy: Fail
    name: validating-create-update-gardenlogin.gardener.cloud
    objectSelector:
      matchLabels:
        operations.gardener.cloud/role: kubeconfig
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - configmaps
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
