config/webhook-admission/admission_configurations_ca_patch.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: $(TLSCERT)
    name: validating-create-update-gardenlogin.gardener.cloud
